print action space

--- a/testing_script.ipynb
+++ b/testing_script.ipynb
@@ -104,11 +104,164 @@
     "\n",
     "# print(DMCarr)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DMC array: [[0, [0, 1], 'DMC0', 400, [350, 5, 1]], [1, [2], 'DMC1', 500, [350, 5, 1]], [2, [3, 5], 'DMC2', 500, [350, 5, 1]], [3, [4], 'DMC3', 500, [350, 5, 1]], [4, [5], 'DMC4', 500, [350, 5, 1]], [5, [], 'DMC5', 500, [350, 5, 1]], [6, [1, 6], 'DMC6', 500, [350, 5, 1]], [7, [3, 7], 'DMC7', 500, [350, 5, 1]], [8, [5, 8], 'DMC8', 500, [350, 5, 1]], [9, [2, 3, 4, 9], 'DMC9', 500, [350, 5, 1]]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[[0.0, 350.0, 600.0], [0.0, 4.5, 6.0], [0.0, 1.2, inf]]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from gym import spaces\n",
+    "from DMC_Env import DMC_Env\n",
+    "from structure import DMC_structure\n",
+    "\n",
+    "from DMC_Env import DMC_Env\n",
+    "\n",
+    "\n",
+    "DMCarr = [[] for i in range(10)]\n",
+    "            # index, next, func, goal, input (T, P, Keq)\n",
+    "DMCarr[0] = [0, [0, 1], \"DMC0\", 400, [350, 5, 1]]\n",
+    "DMCarr[1] = [1, [2], \"DMC1\", 500, [350, 5, 1]]\n",
+    "DMCarr[2] = [2, [3, 5], \"DMC2\", 500, [350, 5, 1]]\n",
+    "DMCarr[3] = [3, [4], \"DMC3\", 500, [350, 5, 1]]\n",
+    "DMCarr[4] = [4, [5], \"DMC4\", 500, [350, 5, 1]]\n",
+    "DMCarr[5] = [5, [], \"DMC5\", 500, [350, 5, 1]]\n",
+    "DMCarr[6] = [6, [1, 6], \"DMC6\", 500, [350, 5, 1]]\n",
+    "DMCarr[7] = [7, [3, 7], \"DMC7\", 500, [350, 5, 1]]\n",
+    "DMCarr[8] = [8, [5, 8], \"DMC8\", 500, [350, 5, 1]]\n",
+    "DMCarr[9] = [9, [2, 3, 4, 9], \"DMC9\", 500, [350, 5, 1]]\n",
+    "# DMCarr[2] = [2, [], \"Dummy\", 0, [0, 0, 0]]\n",
+    "\n",
+    "print(\"DMC array:\", DMCarr)\n",
+    "struct = DMC_structure(DMCarr)\n",
+    "\n",
+    "struct.getConstraints(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DMC 0:\n",
+      "  Full Constraints: [[0.0, 250.0, 500.0], [0.0, 1.35, 2.5], [0.0, 2.8, inf]]\n",
+      "  Temperature Constraint: [0.0, 250.0, 500.0]\n",
+      "    -> Lower Bound: 250.0\n",
+      "    -> Upper Bound: 500.0\n",
+      "DMC 1:\n",
+      "  Full Constraints: [[0.0, 350.0, 600.0], [0.0, 4.5, 6.0], [0.0, 1.2, inf]]\n",
+      "  Temperature Constraint: [0.0, 350.0, 600.0]\n",
+      "    -> Lower Bound: 350.0\n",
+      "    -> Upper Bound: 600.0\n",
+      "DMC 2:\n",
+      "  Full Constraints: [[0.0, 400.0, 500.0], [0.0, 2.5, 5.5], [0.0, 1.7, inf]]\n",
+      "  Temperature Constraint: [0.0, 400.0, 500.0]\n",
+      "    -> Lower Bound: 400.0\n",
+      "    -> Upper Bound: 500.0\n",
+      "DMC 3:\n",
+      "  Full Constraints: [[0.0, 300.0, 500.0], [0.0, 1.0, 3.75], [0.0, 1.3, inf]]\n",
+      "  Temperature Constraint: [0.0, 300.0, 500.0]\n",
+      "    -> Lower Bound: 300.0\n",
+      "    -> Upper Bound: 500.0\n",
+      "DMC 4:\n",
+      "  Full Constraints: [[0.0, 400.0, 600.0], [0.0, 0.5, 5.5], [0.0, 1.5, inf]]\n",
+      "  Temperature Constraint: [0.0, 400.0, 600.0]\n",
+      "    -> Lower Bound: 400.0\n",
+      "    -> Upper Bound: 600.0\n",
+      "DMC 5:\n",
+      "  Full Constraints: [[0.0, 200.0, 400.0], [0.0, 1.5, 4.5], [0.0, 1.0, inf]]\n",
+      "  Temperature Constraint: [0.0, 200.0, 400.0]\n",
+      "    -> Lower Bound: 200.0\n",
+      "    -> Upper Bound: 400.0\n",
+      "DMC 6:\n",
+      "  Full Constraints: [[0.0, 250.0, 450.0], [0.0, 0.5, 3.5], [0.0, 3.1, inf]]\n",
+      "  Temperature Constraint: [0.0, 250.0, 450.0]\n",
+      "    -> Lower Bound: 250.0\n",
+      "    -> Upper Bound: 450.0\n",
+      "DMC 7:\n",
+      "  Full Constraints: [[0.0, 400.0, 600.0], [0.0, 4.5, 6.0], [0.0, 1.0, inf]]\n",
+      "  Temperature Constraint: [0.0, 400.0, 600.0]\n",
+      "    -> Lower Bound: 400.0\n",
+      "    -> Upper Bound: 600.0\n",
+      "DMC 8:\n",
+      "  Full Constraints: [[0.0, 200.0, 500.0], [0.0, 2.5, 5.0], [0.0, 1.1, inf]]\n",
+      "  Temperature Constraint: [0.0, 200.0, 500.0]\n",
+      "    -> Lower Bound: 200.0\n",
+      "    -> Upper Bound: 500.0\n",
+      "DMC 9:\n",
+      "  Full Constraints: [[0.0, 400.0, 600.0], [0.0, 1.0, 3.0], [0.0, 1.3, inf]]\n",
+      "  Temperature Constraint: [0.0, 400.0, 600.0]\n",
+      "    -> Lower Bound: 400.0\n",
+      "    -> Upper Bound: 600.0\n",
+      "Action Space Low: [250. 350. 400. 300. 400. 200. 250. 400. 200. 400.]\n",
+      "Action Space High: [500. 600. 500. 500. 600. 400. 450. 600. 500. 600.]\n",
+      "Action Space Shape: (10,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Define DMC_Env with __init__ only ---\n",
+    "class DMC_Env:\n",
+    "    def __init__(self, DMCarr):\n",
+    "        super(DMC_Env, self).__init__()\n",
+    "        self.struct = DMC_structure(DMCarr)\n",
+    "        self.num_DMC = len(DMCarr)\n",
+    "\n",
+    "        action_low = []\n",
+    "        action_high = []\n",
+    "        for i in range(self.num_DMC):\n",
+    "            constraints = self.struct.getConstraints(i)\n",
+    "            temp_constraint = constraints[0]\n",
+    "            \n",
+    "            print(f\"DMC {i}:\")\n",
+    "            print(f\"  Full Constraints: {constraints}\")\n",
+    "            print(f\"  Temperature Constraint: {temp_constraint}\")\n",
+    "            print(f\"    -> Lower Bound: {temp_constraint[1]}\")\n",
+    "            print(f\"    -> Upper Bound: {temp_constraint[2]}\")\n",
+    "            \n",
+    "            action_low.append(temp_constraint[1])\n",
+    "            action_high.append(temp_constraint[2])\n",
+    "\n",
+    "        \n",
+    "        self.action_space = spaces.Box(low=np.array(action_low, dtype=np.float32),\n",
+    "                                       high=np.array(action_high, dtype=np.float32),\n",
+    "                                       dtype=np.float32)\n",
+    "\n",
+    "# --- Run test ---\n",
+    "env = DMC_Env(DMCarr)\n",
+    "\n",
+    "print(\"Action Space Low:\", env.action_space.low)\n",
+    "print(\"Action Space High:\", env.action_space.high)\n",
+    "print(\"Action Space Shape:\", env.action_space.shape)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "venv_tf210",
    "language": "python",
    "name": "python3"
   },
@@ -122,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
