--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -8,6 +8,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This was designed to be run on a Tensorflow 2.10 enviornment for native GPU usage."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -60,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As per the format explained above, the DMC chain is initialized below."
+    "As per the format explained previously, the DMC chain is initialized below."
    ]
   },
   {
@@ -168,6 +175,13 @@
     "print(\"Current working directory:\", os.getcwd())\n",
     "print(\"Absolute save path:\", os.path.abspath(os.path.join(\n",
     "        args['model_path'], timestamp)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training and saving loop:"
    ]
   },
   {
@@ -321,6 +335,13 @@
     "np.save(os.path.join(save_dir, \"alpha.npy\"), sac.alpha.numpy())  # keep α if you use it\n",
     "\n",
     "print(f\"\\nModel saved to {save_dir}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This code runs the model and give sample actions"
    ]
   },
   {
@@ -752,14 +773,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## To Do\n",
-    "\n",
-    "- how do I actually extract the final correct policy?\n",
-    "\n",
-    "Done:\n",
+    "Advancements:\n",
     "- running on GPU, but push to ICE in worst case. Every loop now takes just 30 seconds.\n",
     "- Reward function is updated, with minimal performance improvements. It's still absurdly negative - which indicates that the actions picked and initial conditions are terrible.\n",
-    "- testing script shows that the action space is correctly defined - then why is reward so bad? \n",
+    "- testing script shows that the action space is correctly defined\n",
     "\n",
     "SAC3:\n",
     "- now fixed the scaling in the action space tanh\n",
@@ -770,7 +787,7 @@
     "Discussion:\n",
     "- well.. it does converge even if it's terrible. \n",
     "- stateless bandit as a \"testing version\"\n",
-    "- it's in the DMCs.. actually aligned with baseline"
+    "- it's possible it's just the solutions the DMC's are optimized to"
    ]
   }
  ],
